 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed Target Practice missions getting stuck when a target dropped into water
 * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
 * Climb Home: Fix game getting stuck when a player reached home in multiplayer
 * Climb Home: Fix Lua error messages and broken stats screen

Frontend:
 + Campaign screen shows which campaigns and missions you've completed so far
 + Training screen now has 3 mission categories: Training (tutorials), Challenge (get a high score), Scenario (complete a task)
 + Replaced the Fort Mode game modifier by adding "Forts" to the map type selection. This makes the mode easier selectable/discoverable. Also the slider can be used to adjust the distance between forts.
 + Menu screens got few new icons and other tweaks, e.g. larger dropdown lists for easier access
 + Additional button for just randomizing theme that will not change your selected map
 + Randomizing map/theme in online-mode will not include DLC-content
 + New teams start with a random grave and fort
 + Hedgewars creates 4 human teams and 2 computer teams on its first launch
 + Allow to randomize hog names, hats, team name, flag, grave, voice and fort separately
 + “Random team” button is now able to randomly select from all available hats
 + Creating new game/weapon schemes guarantees unique names
 + Custom maps and styles are now marked with an icon instead of an asterisk
 + Mark custom forts in team editor
 * Fix flag being selectable for computer players although it had no effect
 * Campaign screen does no longer show AI-controlled teams
 * Campaign names and campaign mission names can now be translated
 * Creating randomized teams now randomizes (almost) every aspect
 * Fixed mostly broken descriptions for multiplayer mission maps
 * Clicking on "New" in weapon scheme editor now creates empty weapon scheme instead of default