@@ -263,6 +263,7 @@ Missions:
  * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
  * Climb Home: Fix game getting stuck when a player reached home in multiplayer
  * Climb Home: Fix Lua error messages and broken stats screen
+ * Sniper rifle target practice: Fix targets spawning twice in dynamite scenes
 
 Frontend:
  + Campaign screen shows which campaigns and missions you've completed so far
